# yuutraffic

./: .gitignore  CLAUDE.md  CNAME  PIPELINE_MIGRATION_PLAN.md  README.md  app.js  app.py  index.html  kmb_data.db  pyproject.toml  requirements.txt  style.css
.github/workflows/: ci-cd.yml  deploy-demo.yml
backup_old_files/: .flake8  API_STATUS.md  CHANGELOG.md  Dockerfile  FIXES_SUMMARY.md  OPTIMIZATION_SUMMARY.md  README.md  README_CI_CD.md  README_HK_Transport.md  README_SIMPLIFIED.md  ROUTE_FIXES_SUMMARY.md  SYSTEM_MIGRATION.md  api_connectors.py  config.py  data_updater.py  database_manager.py  debug_routes.py  docker-compose.yml  example_usage.py  hk_transport_enhanced.py  hk_transport_enhanced_v2.py  hk_transport_optimized.py  hk_transport_simplified.py  pytest.ini  requirements.txt  run_app.py  run_production.py  run_simplified.py  test_map.py  test_osm_map.html  test_production_features.py  test_routes.py
conf/base/: parameters.yml  parameters_data_ingestion.yml  parameters_data_processing.yml  parameters_web_app.yml
data/: .first_run_complete  meta.json  routes.json  stop_routes.json  stop_sequences.json  stops.json
data/01_raw/: macau_bus.json  macau_lrt.json  macau_shuttles.json  mtr_station_coords.json
data/geometry/: CTB_101R_1.json  CTB_101X_1.json  CTB_101X_2.json  CTB_101_1.json  CTB_101_2.json  CTB_102P_1.json  CTB_102P_2.json  CTB_102R_1.json  CTB_102_1.json  CTB_102_2.json  CTB_103_1.json  CTB_103_2.json  CTB_104_1.json  CTB_104_2.json  CTB_106A_1.json  CTB_106P_1.json  CTB_106P_2.json  CTB_106_1.json  CTB_106_2.json  (+3133 more)
docs/: DEPLOY_STATIC.md  GIT_AND_CI.md  api.md  database.md  deployment.md
pages/: 2_Trip_Planner.py  3_MTR_Routing.py
scripts/: build_macau_geometry.py  build_macau_lrt_geometry.py  build_mtr_coords.py  build_mtr_rail_geometry.py  download_hk_tiles.py  export_static.py  publish.sh
tests/: test_app.py  test_journey.py  test_mtr_modules.py  test_run.py
web/: app.js  index.html  style.css
(+46 files in other folders)
